@@ -1,15 +1,16 @@
 package test.listeners;
 
-import org.testng.Assert;
-import org.testng.IAlterSuiteListener;
-import org.testng.TestNG;
+import org.testng.*;
 import org.testng.annotations.Test;
+import org.testng.internal.collections.Pair;
 import org.testng.xml.XmlSuite;
 import org.testng.xml.XmlTest;
 import test.SimpleBaseTest;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 public class AlterSuiteListenerTest extends SimpleBaseTest {
 
@@ -17,35 +18,61 @@ public class AlterSuiteListenerTest extends SimpleBaseTest {
 
     @Test
     public void executionListenerWithXml() {
-        XmlSuite suite = runTest(AlterSuiteListener1SampleTest.class, AlterSuiteNameListener.class.getName());
+        XmlSuite suite = runTest(AlterSuiteListener1SampleTest.class, AlterSuiteNameListener.class.getName()).second();
         Assert.assertEquals(suite.getName(), AlterSuiteNameListener.class.getSimpleName());
     }
 
     @Test
     public void executionListenerWithoutListener() {
-        XmlSuite suite = runTest(AlterSuiteListener1SampleTest.class, null/*Donot add the listener*/);
+        XmlSuite suite = runTest(AlterSuiteListener1SampleTest.class).second();
         Assert.assertEquals(suite.getName(), ALTER_SUITE_LISTENER);
     }
 
     @Test
     public void executionListenerWithXml2() {
-        XmlSuite suite = runTest(AlterSuiteListener1SampleTest.class, AlterXmlTestsInSuiteListener.class.getName());
+        XmlSuite suite = runTest(AlterSuiteListener1SampleTest.class, AlterXmlTestsInSuiteListener.class.getName()).second();
         Assert.assertEquals(suite.getTests().size(), 2);
     }
 
+    @Test(description = "GITHUB-2469")
+    public void executionListenerWithXml3() {
+        Pair<TestNG, XmlSuite> retObjects = runTest(AlterSuiteListener1SampleTest.class,
+                AlterXmlTestWithParameterInSuiteListener.class.getName(), AlteredXmlSuiteReadListener.class.getName());
+        TestNG tng = retObjects.first();
+        XmlSuite suite = retObjects.second();
+        Assert.assertEquals(suite.getTests().size(), 2);
+        List<ISuiteListener> listeners = Optional.ofNullable(tng.getSuiteListeners()).orElse(new ArrayList<>());
+        Assert.assertFalse(listeners.isEmpty());
+        for (ISuiteListener iSuiteListener :
+                listeners) {
+            if (iSuiteListener instanceof AlteredXmlSuiteReadListener) {
+                AlteredXmlSuiteReadListener alteredXmlSuiteReadListener = (AlteredXmlSuiteReadListener) iSuiteListener;
+                XmlSuite xmlSuite = alteredXmlSuiteReadListener.currentSuiteOnStart.getXmlSuite();
+                List<XmlTest> tests = xmlSuite.getTests();
+                int i = 1;
+                for (XmlTest xmlTest:
+                        tests) {
+                    Assert.assertEquals(xmlTest.getParameter("param"), String.valueOf(i));
+                    i++;
+                }
+            }
+        }
+    }
 
-    private XmlSuite runTest(Class<?> listenerClass, String listenerName) {
+    private Pair<TestNG, XmlSuite> runTest(Class<?> listenerClass, String... listenerNames) {
         XmlSuite s = createXmlSuite(ALTER_SUITE_LISTENER);
         createXmlTest(s, "Test", listenerClass.getName());
-        boolean addListener = (listenerName != null);
 
-        if (addListener) {
+
+        for (String listenerName:
+                listenerNames) {
             s.addListener(listenerName);
         }
         TestNG tng = create();
         tng.setXmlSuites(Arrays.asList(s));
         tng.run();
-        return s;
+        Pair<TestNG, XmlSuite> returnObj = new Pair<>(tng, s);
+        return returnObj;
     }
 
     public static class AlterSuiteListener1SampleTest {
@@ -75,6 +102,39 @@ public class AlterSuiteListenerTest extends SimpleBaseTest {
             XmlTest anotherTest = new XmlTest(suite);
             anotherTest.setName("foo");
             anotherTest.setClasses(test.getClasses());
+        }
+    }
+
+    public static class AlterXmlTestWithParameterInSuiteListener implements IAlterSuiteListener {
+
+        @Override
+        public void alter(List<XmlSuite> suites) {
+            XmlSuite suite = suites.get(0);
+            List<XmlTest> tests = suite.getTests();
+            XmlTest test = tests.get(0);
+
+            List<XmlTest> newXmlTests = new ArrayList<>();
+            XmlTest newXmlTest = (XmlTest) test.clone();
+            newXmlTest.setName("name_1");
+            newXmlTest.addParameter("param", "1");
+            newXmlTests.add(newXmlTest);
+
+            newXmlTest = (XmlTest) test.clone();
+            newXmlTest.setName("name_2");
+            newXmlTest.addParameter("param", "2");
+            newXmlTests.add(newXmlTest);
+
+            suite.setTests(newXmlTests);
+        }
+    }
+
+    public static class AlteredXmlSuiteReadListener implements ISuiteListener {
+
+        public ISuite currentSuiteOnStart;
+
+        @Override
+        public void onStart(ISuite suite) {
+            currentSuiteOnStart = suite;
         }
     }
 
